# ai-powered-resume-optimizer

./: pyproject.toml
src/crewai-server/: .gitignore  README.md  pyproject.toml
src/crewai-server/src/: Dockerfile  requirements-lock.txt  requirements.in
src/crewai-server/src/entrypoints/: server-entrypoint.sh
src/crewai-server/src/resume_engine/: main.py  utils.py
src/crewai-server/src/resume_engine/crews/area_for_improve/: crew.py  models.py
src/crewai-server/src/resume_engine/crews/area_for_improve/config/: agents.yaml
src/crewai-server/src/resume_engine/crews/for_job_posting/: crew.py
src/crewai-server/src/resume_engine/crews/keyword_density/: crew.py  models.py
src/crewai-server/src/resume_engine/crews/resume_scoring/: crew.py
src/crewai-server/src/resume_engine/flows/: aoi_flow.py  ats_flow.py  compiled_flow.py  job_posting.py  k_density.py  scoring_flow.py
src/crewai-server/src/resume_engine/inputs/: resume.md
src/crewai-server/src/resume_engine/server/: main.py  models.py
src/crewai-server/src/resume_engine/server/aoi/: router.py
src/crewai-server/src/resume_engine/server/ats/: router.py
src/crewai-server/src/resume_engine/server/job_posting/: router.py
src/crewai-server/src/resume_engine/server/k_density/: router.py
src/crewai-server/src/resume_engine/server/scoring/: router.py
src/crewai-server/src/resume_engine/tools/: k_density.py
src/crewai-server/src/resume_opt/: main.py  models.py
src/crewai-server/src/resume_opt/crews/area_for_improve/: crew.py
src/crewai-server/src/resume_opt/crews/resume_scoring/: crew.py  models.py
src/crewai-server/src/resume_opt/flows/: aoi_flow.py  ats_flow.py  compiled_flow.py  scoring_flow.py
src/crewai-server/src/resume_opt/inputs/: rresume.md
src/crewai-server/src/scripts/: docker.build.sh
src/deploy/: .gitignore
(+46 files in other folders)
